Fix passwordInput overflow issue css bug 😖

--- a/src/components/utility/Input/input.module.css
+++ b/src/components/utility/Input/input.module.css
@@ -25,7 +25,7 @@
 }
 
 .password {
-  flex-grow: 1;
+  width: 100%;
   border-radius: 0.25rem;
 }
 
@@ -49,7 +49,7 @@
 .seen {
   border-radius: 50%;
   height: 2rem;
-  width: 2rem;
+  min-width: 2rem;
   background-color: hsl(0 0% 100% / 0);
   position: relative;
   margin-inline: 0.5rem;
